# vrep_youbot_plugin

./: CMakeLists.txt  README.md  manifest.xml  vrep_start.sh
include/vrep_plugin/ros/callback/: OdometryCallback.h
include/vrep_plugin/ros/pluglet/: ClockPluglet.h  OdometryPluglet.h
scenes/: youbot_arm.ttt  youbot_dev.ttt
src/: v_repExtyouBot.cpp
src/lua/: GenericLuaFunctionRegistry.cpp
src/ros/callback/: ClockCallback.cpp  JointControlCallback.cpp  OdometryCallback.cpp  SwedishBaseControllerCallback.cpp
src/ros/pluglet/: ClockPluglet.cpp  JointControlPluglet.cpp  OdometryPluglet.cpp  SwedishBaseControllerPluglet.cpp
test/: test_joint_position.sh
